--- a/projects.yaml
+++ b/projects.yaml
@@ -839,6 +839,11 @@ projects:
     home_url: http://sphinx-doc.org/
     desc: Documentation tool for interconnected bodies of authorship, from code documentation to books. Used by [the official Python docs](https://docs.python.org), and many other projects ([not all of them Python](https://varnish-cache.org/docs/)).
     tags: ["docs"]
+  - name: mkdocs
+    repo_url: https://github.com/mkdocs/mkdocs
+    home_url: https://www.mkdocs.org/
+    desc: Simple, customizable project documentation, with built-in dev server.
+    tags: ["docs"]
   - name: Robot Framework
     repo_url: https://github.com/robotframework/robotframework
     home_url: http://robotframework.org/
