--- a/projects.yaml
+++ b/projects.yaml
@@ -1048,6 +1048,13 @@ projects:
     repo_url: https://github.com/stamparm/maltrail
     desc: Malicious traffic detection system with web-based monitoring.
     tags: ["security", "server", "linux"]
+  - name: Spiderfoot
+    repo_url: https://github.com/smicallef/spiderfoot
+    home_url: https://www.spiderfoot.net/
+    docs_url: https://www.spiderfoot.net/documentation/
+    desc: Reconnaissance tool that automatically queries over 100 public data sources to gather intelligence on IP addresses, domain names, e-mail addresses, names, and more.
+    tags: ["security", "linux", "windows", "mac", "server", "docker"]
+
 ## Code Review
   - name: Review Board
     repo_url: https://github.com/reviewboard/reviewboard
