--- a/projects.yaml
+++ b/projects.yaml
@@ -403,6 +403,12 @@ projects:
     docs_url: https://gitlab.gnome.org/World/OpenPaperwork/paperwork/wikis/home
     desc: "Personal document manager for organizing scanned documents and PDFs, with support for OCR, automatic tagging, and search."
     tags: ["organization", "gtk", "linux", "windows"]
+  - name: ArchiveBox
+    repo_url: https://github.com/pirate/ArchiveBox
+    home_url: https://archivebox.io/
+    docs_url: https://github.com/pirate/ArchiveBox/wiki
+    desc: Self-hosted web archive, for creating local, browsable backups of content from the web. Imports HTML, JS, PDFs, video, subtitles, git repositories, and more, from Pocket, Pinboard, browser history, etc.
+    tags: ["organization", "internet", "linux", "windows", "docker"]
 
 ## Communication
 
