--- a/projects.yaml
+++ b/projects.yaml
@@ -954,7 +954,12 @@ projects:
     repo_url: https://github.com/wting/autojump
     desc: A `cd` with many heuristics to speed up console filesystem navigation.
     tags: ["dev", "console"]
-
+  - name: kinto
+    repo_url: https://github.com/Kinto/kinto
+    docs_url: http://docs.kinto-storage.org/
+    home_url: https://www.kinto-storage.org/
+    desc: A generic JSON document store with sharing and synchronisation capabilities, supporting in-memory and PostgreSQL backends.
+    tags: ["dev", "Server"]
 
 ## Editors
   - name: Spyder IDE
@@ -1049,12 +1054,11 @@ projects:
     home_url: https://opensnitch.io/
     desc: GNU/Linux port of the [Little Snitch](https://en.wikipedia.org/wiki/Little_Snitch) application firewall.
     tags: ["security", "qt5", "linux"]
-  - name: kinto
-    repo_url: https://github.com/Kinto/kinto
-    docs_url: http://docs.kinto-storage.org/
-    home_url: https://www.kinto-storage.org/
-    desc: Multi-platform remote administration tool and post-exploitation framework.
-    tags: ["security", "server"]
+  - name: Pupy
+    repo_url: https://github.com/n1nj4sec/pupy
+    docs_url: https://github.com/n1nj4sec/pupy/wiki/Installation
+    desc: Remote administration tool and post-exploitation framework, supporting Windows, Linux, Mac OS X, and Android targets.
+    tags: ["security", "server", "linux", "docker"]
   - name: sqlmap
     repo_url: https://github.com/sqlmapproject/sqlmap
     home_url: http://sqlmap.org/
