--- a/projects.yaml
+++ b/projects.yaml
@@ -1235,6 +1235,8 @@ projects:
 ## Package repositories
   - name: Warehouse
     repo_url: https://github.com/pypa/warehouse
+    fund_url: 'https://psfmember.org/civicrm/contribute/transact?reset=1&id=13'
+    docs_url: https://warehouse.pypa.io/
     desc: Server software that powers [PyPI](https://pypi.org/), where most Python libraries are downloaded from.
     tags: ["pkg_repo", "fnd", "server"]
   - name: Bandersnatch
