--- a/projects.yaml
+++ b/projects.yaml
@@ -969,6 +969,12 @@ projects:
     home_url: https://taiga.io/
     desc: Web application built for managing projects with agile development processes.
     tags: ["dev", "organization", "django", "server"]
+  - name: dvc (Data Version Control)
+    repo_url: https://github.com/iterative/dvc
+    docs_url: https://dvc.org/doc
+    home_url: https://dvc.org
+    desc: Command-line tool for version control over data used in machine learning projects. Aims to replace Excel and other tools used to track and deploy model versions.
+    tags: ["dev", "organization", "windows", "mac", "linux"]
 
 ## Docs
   - name: asciidoc
