--- a/projects.yaml
+++ b/projects.yaml
@@ -781,6 +781,12 @@ projects:
     docs_url: https://manim.readthedocs.io
     desc: Animation engine for explanatory math videos, primarily designed for [works by 3blue1brown](https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw).
     tags: ["science", "linux"]
+  - name: OPEM
+    repo_url: https://github.com/ECSIM/opem
+    docs_url: https://www.ecsim.ir/opem/doc/
+    desc: The Open-Source PEMFC Simulation Tool (OPEM) is a modeling tool for evaluating the performance of proton exchange membrane fuel cells.
+    tags: ["science", "linux", "windows", "mac"]
+  
 
 ## Static Site Generators
 
