--- a/projects.yaml
+++ b/projects.yaml
@@ -786,7 +786,7 @@ projects:
     docs_url: https://www.ecsim.ir/opem/doc/
     desc: A modeling tool for evaluating the performance of [proton exchange membrane (PEM) fuel cells](https://en.wikipedia.org/wiki/Proton-exchange_membrane_fuel_cell).
     tags: ["science", "linux", "windows", "mac"]
-  
+
 
 ## Static Site Generators
 
@@ -981,6 +981,12 @@ projects:
     home_url: https://dvc.org
     desc: Command-line tool for version control over data used in machine learning projects. Aims to replace Excel and other tools used to track and deploy model versions.
     tags: ["dev", "organization", "windows", "mac", "linux"]
+  - name: Polyaxon
+    repo_url: https://github.com/polyaxon/polyaxon
+    docs_url: https://docs.polyaxon.com/
+    home_url: https://polyaxon.com/
+    desc: A web-based platform for reproducible and scalable machine learning experiment management and metrics-tracking, based on kubernetes, with support for TensorFlow, PyTorch, Keras, and many more.
+    tags: ["dev", "server"]
 
 ## Docs
   - name: asciidoc
